# routes/authRoutes.js
@@ -8,7 +8,7 @@ const router = Router();
 router.post('/signup', signup);
 router.post('/login', login);
 router.post('/forgot-password', forgotPassword);
-router.post('/reset/:token', reset);
+router.post('/reset', reset);
 
 router.get('/logout', logout);
 
